--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="in-line">
             <img class="branding-logo"
-                 src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/Logo_2.svg"
+                 src="images/Logo_2.svg"
                  alt ="logotipo de Gamers Shop"
                  aria-hidden="true" />
             <p class="branding"
@@ -55,7 +55,7 @@
     <section class="banner  in-stack">
         <div>
             <img class="banner-img" 
-                 src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/banner.png"
+                 src="images/banner.png"
                  alt= "íconos de tecnología en una pantalla táctil para seleccionar."
                  aria-hidden="true" />
         </div>
@@ -394,7 +394,7 @@
                              data-review="5">
 
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/play.webp"
+                            <img src="images/play.webp"
                                  alt="Procesador: AMD Ryzen Zen 2
                                  Gráficos: AMD Radeon RDNA 2
                                  Memoria: 16GB GDDR6
@@ -449,7 +449,7 @@
                              data-price="2300000" 
                              data-image="images/Nikon.webp" data-review="2">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/Nikon.webp"
+                            <img src="images/Nikon.webp"
                                  alt="Nikon Z8 24-120mm f4
                                  Sensor CMOS apilado de formato FX de 45,7 MP
                                  Diseño liviano, 30% más pequeño que el Z9
@@ -500,7 +500,7 @@
                              data-price="735000" 
                              data-image="images/Audifonos.jpeg" data-review="3">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/Audifonos.jpeg"
+                            <img src="images/Audifonos.jpeg"
                                  alt="Procesador QN1 mejora la cancelación de sonido digitalmente
                                  Panel táctil para controlar música y llamadas fácilmente
                                  Atención rápida para escuchar el ambiente sin quitarse los audífonos
@@ -548,7 +548,7 @@
                              data-image="images/Nintendo_Switch.jpg" 
                              data-review="5">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/Nintendo_Switch.jpg"
+                            <img src="images/Nintendo_Switch.jpg"
                                  alt="Consola Nintendo Switch | Pantalla OLED | 2 Joy-Con Blancos | 64GB de almacenamiento
                                  color del producto: blanco y negro."
                                  class="product-img" />
@@ -593,7 +593,7 @@
                              data-image="images/Asus.jpg" 
                              data-review="1">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/Asus.jpg"
+                            <img src="images/Asus.jpg"
                                  alt="El Zenbook Pro 16X ASUS OLED es un portátil para creadores sin concesiones. 
                                  Utiliza una pantalla táctil 16:10 4K OLED HDR y cuenta con un procesador Intel Ci9 de 12ava generación
                                  y una GPU GeForce RTX 3060. El nuevo mecanismo Active Aerodynamic System Ultra (AAS Ultra) 
@@ -685,7 +685,7 @@
                              data-image="images/AudifonosPhillips.jpg"
                              data-review="2">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/AudifonosPhillips.jpg"
+                            <img src="images/AudifonosPhillips.jpg"
                                  alt="Auricular con sonido envolvente, almohadillas reemplazables, reconocimiento de sonidos y lugares.
                                  Color del producto: negro."
                                  class="product-img" />
@@ -728,7 +728,7 @@
                              data-price="4800000" 
                              data-image="images/mackbook.webp" data-review="4">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/mackbook.webp"
+                            <img src="images/mackbook.webp"
                                  alt="Notebook con pantalla de 17 pulgadas, 4K, lector de huella y reconocimiento facial.
                                  Peso aproximado: 300 gramos.
                                  Color del producto: negro."
@@ -772,7 +772,7 @@
                              data-price="6260000" 
                              data-image="images/iphone_15_Pro.png" data-review="3">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/iphone_15_Pro.png"
+                            <img src="images/iphone_15_Pro.png"
                                  alt="Smartphonde con pantalla de 6.7 pulgadas,
                                  Pantalla Super Retina XDR con ProMotion con frecuencia de actualización hasta 120 Hz. Color del producto:
                                  negro. "
@@ -817,7 +817,7 @@
                              data-image="images/Xbox X.png" 
                              data-review="4">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/Xbox X.png"
+                            <img src="images/Xbox X.png"
                                  alt="Xbox Series X Diablo IV Bundle 1 Tera.
                                  Resolución de 2560px x 1440px.
                                  Memoria RAM de 16GB.
@@ -863,7 +863,7 @@
                              data-price="85000" 
                              data-image="images/mouse.webp" data-review="5">
                         <div class="product-img-container in-line">
-                            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/mouse.webp" 
+                            <img src="images/mouse.webp" 
                                  alt="Mouse gamer inalambrico recargable usb optico rgb. Android, Linux, Windows, macOS
                                  4 modos de iluminación RGB (puede apagarse)
                                  Color del producto: negro." 
@@ -911,7 +911,7 @@
     <!--   INICIO FOOTER  -->
     <footer class="footer-main in-line theme-sky-blue">
         <div class="logo-container in-line">
-            <img src="/D:NO_BORRAR_CARPETA_SEGURA/Desktop/RETO_FINAL/images/Logo_2.svg" 
+            <img src="images/Logo_2.svg" 
                  alt ="logotipo de Gamers Shop"
                  class="logo" />
             <p>GAMERS SHOP - Gracias por visitarnos - Derechos reservados 2023</p>
